implemented "first start"- dialog for basic settings
git-svn-id: http://svn.code.sf.net/p/holdingnuts/code/branches/0.8.0@763 00c8e4f2-bc05-11dd-9892-7df5a783e2f7

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -59,7 +59,7 @@ QT4_ADD_RESOURCES(QtApp_RCC_SRCS ${QtApp_RCCS})
 # Warning: older CMake versions (2.6-patch-0) do not provide moc-qt4 with preprocessor definitions
 QT4_WRAP_CPP (
 	sources_MOC
-	pclient.hpp WMain.hpp SettingsDialog.hpp CreateGameDialog.hpp
+	pclient.hpp WMain.hpp FirstStartDialog.hpp SettingsDialog.hpp CreateGameDialog.hpp
 	AboutDialog.hpp GameListTableModel.hpp PlayerListTableModel.hpp GameListSortFilterProxyModel.hpp
 	WTable.hpp ChatBox.hpp DealerButton.hpp Seat.hpp EditableSlider.hpp TimeOut.hpp
 	Chip.hpp ChipStack.hpp
@@ -69,7 +69,7 @@ add_executable (
 	holdingnuts
 	WIN32    # when building for windows: do not show the console window
 	pclient.cpp ${aux_obj}
-	WMain.cpp SettingsDialog.cpp CreateGameDialog.cpp AboutDialog.cpp
+	WMain.cpp FirstStartDialog.cpp SettingsDialog.cpp CreateGameDialog.cpp AboutDialog.cpp
 	GameListTableModel.cpp PlayerListTableModel.cpp GameListSortFilterProxyModel.cpp
 	WTable.cpp ChatBox.cpp DealerButton.cpp Seat.cpp SeatImages.cpp EditableSlider.cpp TimeOut.cpp
 	Chip.cpp ChipStack.cpp
