--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -16,24 +16,24 @@ link_directories(
 	${HOLDINGNUTS_SOURCE_DIR}/src/system
 )
 
-add_executable (gc_test
-	gc_test.cpp
-	../server/GameController.cpp
-	../server/Table.cpp
-	TestCase.cpp
-)
-target_link_libraries(gc_test Poker System)
+#add_executable (gc_test
+#	gc_test.cpp
+#	../server/GameController.cpp
+#	../server/Table.cpp
+#	TestCase.cpp
+#)
+#target_link_libraries(gc_test Poker System)
 
-add_executable (test
-	test.cpp
-)
-target_link_libraries(test Poker System)
+#add_executable (test
+#	test.cpp
+#)
+#target_link_libraries(test Poker System)
 
 add_executable (simulator simulator.cpp)
 target_link_libraries(simulator Poker)
 
-add_executable (systest system.cpp)
-target_link_libraries(systest System SysAccess)
+#add_executable (systest system.cpp)
+#target_link_libraries(systest System SysAccess)
 
 if (ENABLE_SQLITE)
 	add_executable (dbtest dbtest.cpp)
